tests/failed/08-missing-repr.rs
use endiannezz::Io;

#[derive(Io)]
#[endian(big)]
enum Foo {
    Bar,
    Baz,
}

fn main() {}
